--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li>
             <a href="">
-            <img src="images\menu_home.png" alt="HOME">    
+            <img src="images\menu_home_blue.png" alt="HOME">    
             </a>
         </li>
         <li class="menu">
@@ -122,7 +122,7 @@
                         </p>
                         <a href="">
                             קרא עוד
-                            <img src="images\read_more_yellow.png">
+                            <img src="images\read_more_white.png">
                         </a>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                         </p>
                         <a href="">
                             קרא עוד
-                            <img src="images\read_more_yellow.png">
+                            <img src="images\read_more_white.png">
                         </a>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                         </p>
                         <a href="">
                             קרא עוד
-                            <img src="images\read_more_yellow.png">
+                            <img src="images\read_more_white.png">
                         </a>
                     </div>
                 </div>
@@ -218,65 +218,4 @@
 </body>
 
 </html>
-    <!--
-            <section class="row">
-    <div class="column-width33">
-        <img class="fix-size" src="images\╫ñ╫û╫º╫¿_-291_354410564000.jpg">
-      <div class="trans">
-        <h3>קמעונאות ומסחר</h3>
-        <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-        <a ref="#">קרא עוד< img src=''></a>   
-      </div>
-    </div>
-    <div class="column-width33">
-        <img class="fix-size" src="images\Picture-046410251500.jpg">
-        <div class="trans">            
-        <h3>קמעונאות ומסחר</h3>
-        <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-        <a ref="#">קרא עוד< img src=''></a>   
-      </div>
-    </div>
-    <div class="column-width33">
-        <img class="fix-size" src="images\1908364606615453350.jpg">
-        <div class="trans">            
-            <h3>קמעונאות ומסחר</h3>
-            <p>במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</p>
-            <a ref="#">קרא עוד< img src=''></a>   
-        </div>
-    </div>
-    </section>
- 
-    <section class="row">
-    <div class="column-width33">
-        <img class="fix-size" src="images\Untitled-3058756287.jpg">
-    </div>
-    <div class="column-width33">
-        <img class="fix-size" src="images\banner_atar.jpg">
-    </div>
-    <div class="column-width33">
-        <img class="fix-size" src="images\paz_250x110059890678.jpg">      </a>
-    </div>
-    </section>
-    </main>
-    <footer>
-    <nav class="horizontal">
-      <ul>
-        <li><a href="" target="_blank" alt=face></a></li>
-        <li class="menu">
-          <a href="">עמוד הבית</a>
-          <a href="">מחירונים</a>
-          <a href="">קריירה</a>
-          <a href="">תנאי שימוש</a>
-          <a href="">נגישות</a>
-          <a href="">מפת אתר</a>
-          <a href="">צור קשר</a>
-          <a href="">שטחי מסחר</a>
-          <a  id="LiLast" class="ftr" href="">הסדר פשרה בתובענה הייצוגית בעניין הסדר פזומט</a>
-         </li>
-      </ul>
-    </nav>   
-    </footer>
-  </body>
-
-</html>
--->
+  
